# APluginSDK

./: .gitattributes  README.md  pluginapi.h  plugininfos.h
implementation/: featuremanager.cpp  featuremanager.h  infomanager.cpp  infomanager.h  infomanager.ipp  macros.h  pluginapi.cpp
libs/ACUtils/: .gitattributes  .gitignore  .gitrepo  CMakeLists.txt  LICENSE
libs/ACUtils/include/ACUtils/: adynarray.h  astring.h  definitions.h  dynarray.h  macros.h  types.h
libs/ACUtils/src/: adynarray.c  astring.c  dynarray.c
libs/ACUtils/tests/: CMakeLists.txt
libs/ACUtils/tests/include/ACUtilsTest/: acheck.h
libs/ACUtils/tests/libs/check/: .gitrepo
libs/ACUtils/tests/src/: test_adynarray.c  test_astring.c  test_dynarray.c  testrunner.c
private/: exports.h  infomanager.h  macros.h  plugininfos.h  privateplugininfos.h  signatureparser.h  types.h
private/c/: macros.h
private/cpp/: macros.h
private/src/: infomanager.c  signatureparser.c
src/c/: pluginapi.c
src/cpp/: pluginapi.cpp
tests/libs/check/: .gitrepo
